# MAPD

./: CMakeLists.txt  GA.cpp  GA.h  ICBSNode.cpp  ICBSNode.h  ICBSSearch.cpp  ICBSSearch.h  LLNode.cpp  LLNode.h  MDD.cpp  MDD.h  Makefile3  README.md  Simulation.cpp  Simulation.h  SingleAgentICBS.cpp  SingleAgentICBS.h  SingleSearch.cpp  SingleSearch.h  main.cpp  map_loader.h  node.h  run-large.sh  run.sh  run1.sh
Instances/large/: kiva-100-1000-50.map  kiva-1000-50.task  kiva-200-1000-50.map  kiva-300-1000-50.map  kiva-400-1000-50.map  kiva-500-1000-50.map
Instances/small/: kiva-0.2.task  kiva-0.5.task  kiva-00-500-5.map  kiva-00.task  kiva-01.task  kiva-02.task  kiva-1.task  kiva-10-500-5.map  kiva-10.task  kiva-11-500-5.map  kiva-2.task  kiva-20-500-5.map  kiva-30-500-5.map  kiva-4-500-5.map  kiva-40-500-5.map  kiva-5.task  kiva-50-500-5.map  kiva-500.task
Resultados/: smallcI-CBS_E.csv  smallcI-SCOL_E.csv  smallcI-SCOL_TA.csv  smallsI-AS_TA.csv  smallsI-CBS_E.csv  smallsI-SCOL_E.csv  smallsI-SCOL_TA.csv
dlib/http_client/: http_client.cpp
